--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
       </dd>
 
       <dt>
+        <a href="http://markdowntable.com/">markdowntable.com</a>
+      </dt>
+      <dd>
+        A super basic table formatter for markdown. Eventually, I'll make it
+        live update and add more features, but it's handy as it is.
+      </dd>
+
+      <dt>
         <a href="https://minecraft.alanwsmith.com/">minecraft.alanwsmith.com</a>
       </dt>
       <dd>
