--- a/index.html
+++ b/index.html
@@ -109,6 +109,14 @@
       </dd>
 
       <dt>
+        <a href="https://qrclock.alanwsmith.com/">qrclock.alanwsmith.com</a>
+      </dt>
+      <dd>
+        I wanted to see what would happen if you encoded time into a QR code.
+        This is it.
+      </dd>
+
+      <dt>
         <a href="https://slides.alanwsmith.com/">slides.alanwsmith.com</a>
       </dt>
       <dd>Gonna start putting slide decks here for talks and videos</dd>
