updated d3-scratchpad to d3-playground

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       </dd>
 
       <dt>
-        <a href="https://d3-scratchpad.alanwsmith.com/"
-          >d3-scratchpad.alanwsmith.com</a
+        <a href="https://d3-playground.alanwsmith.com/"
+          >d3-playground.alanwsmith.com</a
         >
       </dt>
       <dd>A place to mess around with D3. Just getting started on this one</dd>
