--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
       body {
         background-color: #333;
         color: #eef2f2;
+        font-size: 1.4rem;
       }
       a {
         color: #16b4f7;
+      }
+      dt {
+        padding-top: 1rem;
+      }
+      dd {
+        padding-top: 1rem;
       }
     </style>
   </head>
@@ -100,6 +107,11 @@
       <dd>A little game where you decrypt texts</dd>
 
       <dt>
+        <a href="https://ngrok-qr.alanwsmith.com/">ngrok-qr.alanwsmith.com</a>
+      </dt>
+      <dd>A quick place to send ngrok urls to your phone via qr codes</dd>
+
+      <dt>
         <a href="https://podcast.alanwsmith.com/">podcast.alanwsmith.com</a>
       </dt>
       <dd>
@@ -117,16 +129,27 @@
       </dd>
 
       <dt>
-        <a href="https://slides.alanwsmith.com/">slides.alanwsmith.com</a>
-      </dt>
-      <dd>Gonna start putting slide decks here for talks and videos</dd>
-
-      <dt>
         <a href="https://scratchpad.alanwsmith.com/"
           >scratchpad.alanwsmith.com</a
         >
       </dt>
       <dd>My general scrachpad for web stuff written in next.js</dd>
+
+      <dt>
+        <a href="https://slides.alanwsmith.com/">slides.alanwsmith.com</a>
+      </dt>
+      <dd>Gonna start putting slide decks here for talks and videos</dd>
+
+      <dt>
+        <a href="https://static-template.alanwsmith.com/"
+          >static-template.alanwsmith.com</a
+        >
+      </dt>
+      <dd>
+        My basic template for starting sites without frameworks. Has sample
+        favicons and Open Graph image calls and will eventually have CSS and JS
+        samples
+      </dd>
 
       <dt><a href="https://www.surftech.tv/">SurfTech.tv</a></dt>
       <dd>
