Added og image and favicons

--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,93 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>The Links Of Alan</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>
+      TheLinksOfAlan, Or, How To Grow Your Digital Garden With Sub-Domains
+    </title>
+
+    <meta
+      name="description"
+      content="A page of links that turned into a story of how to expand your digital garden"
+    />
+
+    <meta property="og:title" content="links.alanwsmith.com" />
+    <meta
+      property="og:description"
+      content="A page of links that turned into a story of how to expand your digital garden"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://links.alanwsmith.com/" />
+    <meta
+      property="og:image"
+      content="https://links.alanwsmith.com/og-images/main.jpg"
+    />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:creator" content="@theidofalan" />
+    <meta
+      name="twitter:title"
+      content="TheLinksOfAlan, Or, How To Grow Your Digital Garden With Sub-Domains"
+    />
+    <meta
+      name="twitter:image"
+      content="https://links.alanwsmith.com/og-images/main.jpg"
+    />
+
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicons/16x16.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicons/32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="/favicons/96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="128x128"
+      href="/favicons/128x128.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="196x196"
+      href="/favicons/196x196.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="228x228"
+      href="/favicons/228x228.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="152x152"
+      href="/favicons/152x152.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="167x167"
+      href="/favicons/167x167.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="180x180"
+      href="/favicons/180x180.png"
+    />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -11,10 +97,10 @@
 
     <style>
       body {
-        background-color: #483a58;
-        color: #cca43b;
+        background-color: #3d304d;
+        color: #d69f13;
         font-family: 'Inter', sans-serif;
-        font-size: 1.05rem;
+        font-size: 1.1rem;
         font-weight: 300;
         margin: 0;
         padding-top: 0;
@@ -45,9 +131,9 @@
       }
 
       h1 {
-        font-size: 2.7rem;
+        font-size: 2.1rem;
         font-weight: 700;
-        padding-bottom: 0.1rem;
+        padding-bottom: 0.9rem;
         margin: 0;
       }
 
@@ -62,18 +148,31 @@
         border-bottom: 1px solid gray;
       }
 
+      h3 {
+        font-size: 1.3rem;
+        margin: 0;
+        padding-top: 2rem;
+        padding-bottom: 3px;
+        border-bottom: 1px solid #d69f13;
+      }
+
+      h4 {
+        font-size: 1.5rem;
+      }
+
       header {
         flex-shrink: 0;
         margin: 0 auto;
         max-width: 62ch;
         flex-direction: column;
         width: 100%;
+        padding-top: 18px;
       }
+
       main {
         flex-grow: 1;
         margin: 0 auto;
         max-width: 62ch;
-        padding-top: 18px;
       }
 
       footer {
@@ -89,21 +188,19 @@
 
       .spacer {
         text-align: center;
-        padding-top: 24px;
-        padding-bottom: 26px;
+        padding-top: 30px;
+        padding-bottom: 70px;
+        border-bottom: 1px solid #d69f13;
       }
     </style>
   </head>
   <body>
-    <header></header>
-    <main>
+    <header>
       <h1>links.alanwsmith.com</h1>
-
       <h2>Or, How to grow your digital garden with sub-domains</h2>
-
-      <p>
-        <strong>First things first</strong>
-      </p>
+    </header>
+    <main>
+      <h3>First things first</h3>
       <p>
         Welcome to my links page. You can find me on
         <a href="https://twitter.com/TheIdOfAlan">Twitter</a> a lot,
@@ -113,15 +210,13 @@
         playing around with a
         <a href="https://podcast.alanwsmith.com/">podcast</a> in the mean time.
       </p>
-
       <p>
-        The rest of the links are further below. Before we get to them, we need
-        to tell the story of a digital garden.
+        The rest of the links are
+        <a href="#my-digital-domain-garden">further below</a>. But, before we
+        get to them, we need to tell the story of a digital garden.
       </p>
 
-      <div class="spacer">~</div>
-
-      <p><strong>A New Idea</strong></p>
+      <h3>A New Idea</h3>
 
       <p>
         I first heard about digital gardens on the wonderful
@@ -150,9 +245,7 @@
 
       <p>But, I was feeling resistance.</p>
 
-      <div class="spacer">~</div>
-
-      <p><strong>Friction</strong></p>
+      <h3>Friction</h3>
 
       <p>
         Whenever I wanted to play with an idea, I'd have to take the existing
@@ -175,9 +268,7 @@
         infrastructue that supports it.
       </p>
 
-      <div class="spacer">~</div>
-
-      <p><strong>Enter Dusty Domains</strong></p>
+      <h3>Enter Dusty Domains</h3>
 
       <p>
         <a href="https://dusty.domains/">Dusty Domains</a> was a charity project
@@ -221,9 +312,7 @@
 
       <p>Now, I do.</p>
 
-      <div class="spacer">~</div>
-
-      <p><strong>I have one domain</strong></p>
+      <h3>I have one domain</h3>
 
       <p>
         When you buy a domain name, the basic setup ends up giving you two. One
@@ -250,9 +339,7 @@
         sometimes spans sub-domains for functionality.
       </p>
 
-      <div class="spacer">~</div>
-
-      <p><strong>Then, something happened</strong></p>
+      <h3>Then, something happened</h3>
 
       <p>
         It was getting towards the end of the Dusty Domains and they hadn't hit
@@ -284,9 +371,7 @@
 
       <p>Each one, a clean slate.</p>
 
-      <div class="spacer">~</div>
-
-      <p><strong>Infinite Space</strong></p>
+      <h3>Infinite Space</h3>
 
       <p>Not gonna lie. I feel drunk thinking of the implications.</p>
 
@@ -311,12 +396,16 @@
         <a href="https://javascript-playground.alanwsmith.com/">and get going</a
         >.
       </p>
+
       <p>How about something less practical?</p>
+
       <p>
         Like, say, making 26 domains. One for each letter of the alphabet with
         nothing but the letter on it...
       </p>
+
       <p>Allow me to present:</p>
+
       <p>
         <a href="https://a.alanwsmith.com/">a</a>,
         <a href="https://b.alanwsmith.com/">b</a>,
@@ -347,9 +436,7 @@
       </p>
       <p>Easy as 1, 2, 3.</p>
 
-      <div class="spacer">~</div>
-
-      <p><strong>An Infinite Garden</strong></p>
+      <h3>An Infinite Garden</h3>
 
       <p>
         The idea of the digital garden resonanted with me the instant I heard
@@ -378,7 +465,15 @@
       <p>Our gardens are infinite.</p>
 
       <div class="spacer">~ fin ~</div>
-      <div class="spacer">&nbsp;</div>
+
+      <h4 id="my-digital-domain-garden">My Digital Domain Garden</h4>
+
+      <p>
+        And with that, allow me to introduce you to my domain garden. I just
+        started some of them so they're pretty sparse. But, that's what it's all
+        about. And, more importantly, I'm really loving the process of seeing
+        which ones catch my attention and grow.
+      </p>
 
       <dl>
         <dt><a href="https://www.alanwsmith.com/">alanwsmith.com</a></dt>
