--- a/site/index.html
+++ b/site/index.html
@@ -97,8 +97,8 @@
 
     <style>
       body {
-        background-color: #3d304d;
-        color: #d69f13;
+        background-color: #0a100d;
+        color: #d6d5c9;
         font-family: 'Inter', sans-serif;
         font-size: 1.1rem;
         font-weight: 300;
