--- a/site/index.html
+++ b/site/index.html
@@ -102,6 +102,7 @@
         font-family: 'Inter', sans-serif;
         font-size: 1.1rem;
         font-weight: 300;
+        line-height: 1.4rem;
         margin: 0;
         padding-top: 0;
         padding-bottom: 0;
@@ -133,16 +134,17 @@
       h1 {
         font-size: 2.1rem;
         font-weight: 700;
-        padding-bottom: 0.9rem;
+        padding-bottom: 1.2rem;
         margin: 0;
+        padding-top: 8px;
       }
 
       h2 {
-        font-size: 1.5rem;
+        font-size: 1.45rem;
         font-weight: 700;
-        padding-top: 4px;
-        margin-top: 0;
-        padding-bottom: 0.29rem;
+        margin-top: 3px;
+        padding-top: 0.6rem;
+        padding-bottom: 0.6rem;
         margin-bottom: 1.8rem;
         border-top: 1px solid gray;
         border-bottom: 1px solid gray;
@@ -197,23 +199,22 @@
   <body>
     <header>
       <h1>links.alanwsmith.com</h1>
-      <h2>Or, How to grow your digital garden with sub-domains</h2>
+      <h2>Or, How To Grow Your Digital Garden With Sub-Domains</h2>
     </header>
     <main>
       <h3>First things first</h3>
       <p>
         Welcome to my links page. You can find me on
-        <a href="https://twitter.com/TheIdOfAlan">Twitter</a> a lot,
-        <a href="https://www.twitch.tv/theidofalan">Twitch</a> occasionally, and
-        I will one day return to
-        <a href="https://www.instagram.com/theidofalan/">Instagram</a>. I'm also
-        playing around with a
-        <a href="https://podcast.alanwsmith.com/">podcast</a> in the mean time.
+        <a href="https://twitter.com/TheIdOfAlan">Twitter</a> a lot and
+        <a href="https://www.twitch.tv/theidofalan">Twitch</a> occasionally. My
+        main site is <a href="https://www.alanwsmith.com">alanwsmith.com</a>.
+        I'm also playing around with a
+        <a href="https://podcast.alanwsmith.com/">podcast</a>.
       </p>
       <p>
-        The rest of the links are
-        <a href="#my-digital-domain-garden">further below</a>. But, before we
-        get to them, we need to tell the story of a digital garden.
+        The rest of my links are
+        <a href="#my-digital-domain-garden">further below</a>. Before we get to
+        them, we need to tell the story of a digital garden.
       </p>
 
       <h3>A New Idea</h3>
@@ -224,7 +225,7 @@
         me to these posts by
         <a href="https://maggieappleton.com/garden-history">Maggie Appleton</a>
         and <a href="https://joelhooks.com/digital-garden">Joel Hooks</a> which
-        explian the concept nicely. Here's a brief snippet from Maggie
+        explain the concept nicely. Here's a brief snippet from Maggie
         Appleton's piece:
       </p>
 
@@ -256,16 +257,15 @@
       </p>
 
       <p>
-        I've got enough experience that that wouldn't be particullarly hard.
-        But, it would be work. And that work is friction. And that friction
-        stops me.
+        I've got enough experience that that wouldn't be particularly hard. But,
+        it would be work. And that work is friction. And that friction stops me.
       </p>
 
-      <p>Or, more accurately, it keeps me from getting started.</p>
+      <p>Or, it's better to say that it keeps me from getting started.</p>
 
       <p>
         When I have an idea, I want to play with it. Not work on the
-        infrastructue that supports it.
+        infrastructure that supports it.
       </p>
 
       <h3>Enter Dusty Domains</h3>
@@ -275,7 +275,7 @@
         (and genius marketing play) from Netlify at the end of 2021. The pitch
         was to dip into the developer community's vast collection of unused
         domains and actually publish something on them by the end of the year.
-        Each completed site added $500 to a pool for coding related charaties.
+        Each completed site added $500 to a pool for coding related charities.
       </p>
 
       <p>
@@ -285,8 +285,8 @@
 
       <p>
         I turned it around in three days and had an absolute blast doing it. I
-        started with nothing more than the domain and an idea and turned into
-        something I'm really proud of.
+        started with nothing more than the domain, an idea, and a deadline and
+        turned into something I'm really proud of.
       </p>
 
       <p>
@@ -298,10 +298,10 @@
       </p>
 
       <p>
-        And, it went way byond that. The software for my main site had no baring
-        on what I used for the new domain. I could use the same framework, a
-        completley different one, or roll back to vanilla HTML, CSS, and
-        JavaScript.
+        And, it went way beyond that. The software for my main site had no
+        bearing on what I used for the new domain. I could use the same
+        framework, a completely different one, or roll back to vanilla HTML,
+        CSS, and JavaScript.
       </p>
 
       <p>
@@ -345,9 +345,9 @@
         It was getting towards the end of the Dusty Domains and they hadn't hit
         their goal. I'd seen one of their inspiration domains called
         <a href="https://hawk.dance/">Hawk Dance</a>. It's a single page site
-        with throw-back style animation. I figured I could pull off something
-        like that, but I didn't have another unused domain that fit the bill.
-        So, I decided to throw something up on a sub-domain of my site and made
+        with throw-back animation. I figured I could pull off something like
+        that, but I didn't have another unused domain that fit the bill. So, I
+        decided to throw something up on a sub-domain of my site and made
         <a href="https://hacking.alanwsmith.com/">hacking.alanwsmith.com</a>.
       </p>
 
@@ -373,13 +373,13 @@
 
       <h3>Infinite Space</h3>
 
-      <p>Not gonna lie. I feel drunk thinking of the implications.</p>
+      <p>Not gonna lie. I feel punch drunk thinking of the implications.</p>
 
       <p>
         The ability to spin up a new domain on a whim feels like a super-power.
         Firing one up to play with a new framework?
         <a href="https://nextjs-playground.alanwsmith.com/">No problem</a>.
-        Spinning one up for every framework out there? I mean, their inifinite,
+        Spinning one up for every framework out there? I mean, they're infinite,
         so... <a href="https://every-framework.alanwsmith.com">why not</a>?
       </p>
 
@@ -397,14 +397,14 @@
         >.
       </p>
 
-      <p>How about something less practical?</p>
+      <p>That's all well and good, but what about something less practical?</p>
 
       <p>
-        Like, say, making 26 domains. One for each letter of the alphabet with
-        nothing but the letter on it...
+        Like, say, a domain for each letter of the alphabet with nothing but the
+        corresponding letter on it...
       </p>
 
-      <p>Allow me to present:</p>
+      <p>Fuck it. Let's go:</p>
 
       <p>
         <a href="https://a.alanwsmith.com/">a</a>,
@@ -439,10 +439,10 @@
       <h3>An Infinite Garden</h3>
 
       <p>
-        The idea of the digital garden resonanted with me the instant I heard
-        it. I made moves towards it with the energy of the initial excitement,
-        but that burned out. The subtle friction and resistance that comes from
-        working within an existing site worn down the entheusisam until it was
+        The idea of the digital garden resonated with me the instant I heard it.
+        I made moves towards it with the energy of the initial excitement, but
+        that burned out. The subtle friction and resistance that comes from
+        working within an existing site worn down the enthusiasm until it was
         gone.
       </p>
 
@@ -450,11 +450,11 @@
         A fitting analogy is the trees of the black forest. They're so dense
         they prevent anything else from growing beneath them. Trying to do new
         work on an existing site is like that. It means fighting against the
-        environment. Being bound by its contraints.
+        environment. Being bound by its constraints.
       </p>
 
       <p>
-        But, we're not bound to a single domain. Doomed to fight aginst its
+        But, we're not bound to a single domain. Doomed to fight against its
         pressures until we give up, exhausted.
       </p>
 
@@ -469,10 +469,11 @@
       <h4 id="my-digital-domain-garden">My Digital Domain Garden</h4>
 
       <p>
-        And with that, allow me to introduce you to my domain garden. I just
+        Now, allow me to introduce my budding digital domain garden. I just
         started some of them so they're pretty sparse. But, that's what it's all
-        about. And, more importantly, I'm really loving the process of seeing
-        which ones catch my attention and grow.
+        about. More importantly, the joy of playing with them and seeing which
+        ones draw my attention and grow is invigorating and recharging and
+        everything working on your own projects should be.
       </p>
 
       <dl>
@@ -498,8 +499,8 @@
           The little page was worth $500 to charity.
         </dd>
         <dt>
-          <a href="https://cloudinary-url-builder.alanwsmith.com/"
-            >cloudinary-url-builder.alanwsmith.com</a
+          <a href="https://cloudinary-image-maker.alanwsmith.com/"
+            >cloudinary-image-maker.alanwsmith.com</a
           >
         </dt>
         <dd>
@@ -543,8 +544,8 @@
           <a href="https://ideas.alanwsmith.com/">ideas.alanwsmith.com</a>
         </dt>
         <dd>
-          A collection of ideas for programmin projects if you need something to
-          help get you started
+          A collection of ideas for programming projects if you need something
+          to help get you started
         </dd>
 
         <dt><a href="https://jacktorrance.blog/">Jack Torrance Blog</a></dt>
@@ -585,9 +586,9 @@
           >
         </dt>
         <dd>
-          It's been on hiatus, and dosn't have a lot there yet, but this is my
+          It's been on hiatus, and doesn't have a lot there yet, but this is my
           long term photography project. (Fair warning that the site isn't
-          respnsive. I didn't know how to do that when I made it)
+          responsive. I didn't know how to do that when I made it)
         </dd>
 
         <dt>
@@ -660,15 +661,6 @@
         </dd>
 
         <dt>
-          <a href="https://sveltekit-playground.alanwsmith.com/"
-            >sveltekit-playground.alanwsmith.com</a
-          >
-        </dt>
-        <dd>
-          A place for me to play around with sveltkit to learn how it works.
-        </dd>
-
-        <dt>
           <a href="https://tailwind-playground.alanwsmith.com/"
             >tailwind-playground.alanwsmith.com</a
           >
@@ -692,7 +684,7 @@
       made by <a href="https://twitter.com/TheIdOfAlan">alan w. smith</a><br />
       who has a <a href="https://www.alanwsmith.com/">website</a> and a
       <a href="https://podcast.alanwsmith.com/">podcast</a> <br />and some other
-      stuff<br />but you alrady know about that since you're here
+      stuff<br />but you already know about that since you're here
     </footer>
   </body>
 </html>
