Moved initial links to bullet points

--- a/site/index.html
+++ b/site/index.html
@@ -203,19 +203,25 @@
     </header>
     <main>
       <h3>First things first</h3>
-      <p>
-        Welcome to my links page. You can find me on
-        <a href="https://twitter.com/TheIdOfAlan">Twitter</a> a lot and
-        <a href="https://www.twitch.tv/theidofalan">Twitch</a> occasionally. My
-        main site is <a href="https://www.alanwsmith.com">alanwsmith.com</a>.
-        I'm also playing around with a
-        <a href="https://podcast.alanwsmith.com/">podcast</a>.
-      </p>
-      <p>
-        The rest of my links are
-        <a href="#my-digital-domain-garden">further below</a>. Before we get to
-        them, we need to tell the story of a digital garden.
-      </p>
+      <p>Welcome to my links page. You can find me on:</p>
+      <ul>
+        <li><a href="https://twitter.com/TheIdOfAlan">Twitter</a> a lot</li>
+        <li>
+          <a href="https://www.twitch.tv/theidofalan">Twitch</a> occasionally
+        </li>
+        <li>
+          There's also my <a href="https://www.alanwsmith.com">main site</a>
+        </li>
+        <li>
+          And my
+          <a href="https://podcast.alanwsmith.com/">podcast</a>
+        </li>
+        <li>
+          <a href="#my-digital-domain-garden">Other links</a> are further below,
+          but we need to tell the story of a digital garden before we get to
+          those:
+        </li>
+      </ul>
 
       <h3>A New Idea</h3>
 
