--- a/site/index.html
+++ b/site/index.html
@@ -470,6 +470,8 @@
 
       <p>Our gardens are infinite.</p>
 
+      <p>Let's see what we can do with them.</p>
+
       <div class="spacer">~ fin ~</div>
 
       <h4 id="my-digital-domain-garden">My Digital Domain Garden</h4>
