Moved og image to png

--- a/site/index.html
+++ b/site/index.html
@@ -22,19 +22,11 @@
     <meta property="og:url" content="https://links.alanwsmith.com/" />
     <meta
       property="og:image"
-      content="https://links.alanwsmith.com/og-images/main.jpg"
+      content="https://links.alanwsmith.com/og-images/main.png"
     />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@theidofalan" />
-    <meta
-      name="twitter:title"
-      content="TheLinksOfAlan, Or, How To Grow Your Digital Garden With Sub-Domains"
-    />
-    <meta
-      name="twitter:image"
-      content="https://links.alanwsmith.com/og-images/main.jpg"
-    />
 
     <link
       rel="icon"
