Trying to get og image to work by chaing the name

--- a/site/index.html
+++ b/site/index.html
@@ -22,7 +22,7 @@
     <meta property="og:url" content="https://links.alanwsmith.com/" />
     <meta
       property="og:image"
-      content="https://links.alanwsmith.com/og-images/main.png"
+      content="https://links.alanwsmith.com/og-images/main-v2.png"
     />
 
     <meta name="twitter:card" content="summary_large_image" />
