Added photos site

--- a/site/index.html
+++ b/site/index.html
@@ -620,6 +620,17 @@
         <dd>A quick place to send ngrok urls to your phone via qr codes</dd>
 
         <dt>
+          <a href="https://photos.alanwsmith.com/">photos.alanwsmith.com</a>
+        </dt>
+        <dd>
+          Photography used to be my thing. It's what I was known for long before
+          I got into code. During the years of getting my ass kicked by mental
+          health issues, it left me. It was gone so long I'&apos;d gotten used
+          to the idea that it was gone forever. Now, it&apos;s back. This is
+          where I&apos;m posting my stuff.
+        </dd>
+
+        <dt>
           <a href="https://podcast.alanwsmith.com/">podcast.alanwsmith.com</a>
         </dt>
         <dd>
