--- a/site/index.html
+++ b/site/index.html
@@ -8,6 +8,10 @@
       TheLinksOfAlan, Or, How To Grow Your Digital Garden With Sub-Domains
     </title>
 
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:creator" content="@theidofalan" />
+    <meta name="twitter:image" content="https://links.alanwsmith.com/og-images/main-v3.png">
+
     <meta
       name="description"
       content="A page of links that turned into a story of how to expand your digital garden"
@@ -22,11 +26,8 @@
     <meta property="og:url" content="https://links.alanwsmith.com/" />
     <meta
       property="og:image"
-      content="https://links.alanwsmith.com/og-images/main-v2.png"
+      content="https://links.alanwsmith.com/og-images/main-v3.png"
     />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:creator" content="@theidofalan" />
 
     <link
       rel="icon"
@@ -209,9 +210,9 @@
           <a href="https://podcast.alanwsmith.com/">podcast</a>
         </li>
         <li>
-          <a href="#my-digital-domain-garden">Other links</a> are further below,
-          but we need to tell the story of a digital garden before we get to
-          those:
+          Other links are
+          <a href="#my-digital-domain-garden">further below</a>, but we need to
+          tell the story of a digital garden before we get to those:
         </li>
       </ul>
 
