--- a/site/index.html
+++ b/site/index.html
@@ -10,7 +10,10 @@
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@theidofalan" />
-    <meta name="twitter:image" content="https://links.alanwsmith.com/og-images/main-v3.png">
+    <meta
+      name="twitter:image"
+      content="https://links.alanwsmith.com/og-images/main-v3.png"
+    />
 
     <meta
       name="description"
@@ -646,6 +649,15 @@
         <dd>
           I wanted to see what would happen if you encoded time into a QR code.
           This is it.
+        </dd>
+
+        <dt>
+          <a href="https://rtr.alanwsmith.com/">rtr.alanwsmith.com</a>
+        </dt>
+        <dd>
+          Gotta have a Roll Tide site. On the TODO list is to figure out the
+          code that keeps all the words in view while filling the page as much
+          as possible
         </dd>
 
         <dt>
