Added manic-scroll site

--- a/site/index.html
+++ b/site/index.html
@@ -576,6 +576,17 @@
         </dd>
 
         <dt>
+          <a href="http://manic-scroll.alanwsmith.com/"
+            >manic-scroll.alanwsmith.com</a
+          >
+        </dt>
+        <dd>
+          A sample of the notes that I took during a manic bipolar episode.
+          There&apos;s nothing particularly profound about them. Just thought it
+          might be interesting to post them
+        </dd>
+
+        <dt>
           <a href="http://markdowntable.com/">markdowntable.com</a>
         </dt>
         <dd>
