--- a/site/index.html
+++ b/site/index.html
@@ -481,6 +481,8 @@
       </p>
 
       <dl>
+        <!-- LINKS -->
+
         <dt><a href="https://www.alanwsmith.com/">alanwsmith.com</a></dt>
         <dd>
           The place where it all began. This is my main site/blog. It&apos;s
@@ -502,6 +504,22 @@
           for Netlify's 2021 <a href="https://dusty.domains/">Dusty Domains</a>.
           The little page was worth $500 to charity.
         </dd>
+
+        <dt>
+          <a href="https://ascii-art.alanwsmith.com/"
+            >ascii-art.alanwsmith.com</a
+          >
+        </dt>
+        <dd>
+          A few famous pieces of art turned into ASCII. This is experiment in
+          making a site out of just HTML. There&apos;s no JavaScript, CSS, or
+          image calls. Just the HTML. The idea came from
+          <a href="https://twitter.com/whitep4nth3r/status/1510568114966171649"
+            >this tweet from whitep4nth3r</a
+          >
+          about HTML only web sites.
+        </dd>
+
         <dt>
           <a href="https://cloudinary-image-maker.alanwsmith.com/"
             >cloudinary-image-maker.alanwsmith.com</a
@@ -532,6 +550,7 @@
             >Device Pixel Ratio</a
           >
         </dd>
+
         <dt><a href="https://github.com/alanwsmith">GitHub Profile</a></dt>
         <dd>
           I never used to put stuff on GitHub. I've flipped that. My approach
@@ -643,6 +662,19 @@
           health issues, it left me. It was gone so long I'&apos;d gotten used
           to the idea that it was gone forever. Now, it&apos;s back. This is
           where I&apos;m posting my stuff.
+        </dd>
+
+        <dt>
+          <a href="https://pixel-art.alanwsmith.com"
+            >pixel-art.alanwsmith.com</a
+          >
+        </dt>
+        <dd>
+          This is an experiment to make pixel art using only an HTML table. No
+          JavaScript, no CSS, no images, just the HTML. It was inspired by
+          <a href="https://twitter.com/whitep4nth3r/status/1510568114966171649"
+            >this tweet from whitep4nth3r</a
+          >
         </dd>
 
         <dt>
