--- a/site/index.html
+++ b/site/index.html
@@ -564,6 +564,26 @@
         <dd>This is what hacking looks like</dd>
 
         <dt>
+          <a href="https://horsevatars.alanwsmith.com/"
+            >horsevatars.alanwsmith.com</a
+          >
+        </dt>
+        <dd>
+          Playing around with making multi-color avatars for
+          <a href="https://frontend.horse/">Frontend Horse</a> as an experiment
+        </dd>
+
+        <dt>
+          <a href="https://html-maze.alanwsmith.com/"
+            >html-maze.alanwsmith.com</a
+          >
+        </dt>
+        <dd>
+          Another experiment to see what can be done with HTML alone. No
+          JavaScript. No CSS. Just tags (including some deprecated ones)
+        </dd>
+
+        <dt>
           <a href="https://ideas.alanwsmith.com/">ideas.alanwsmith.com</a>
         </dt>
         <dd>
