--- a/site/index.html
+++ b/site/index.html
@@ -574,6 +574,17 @@
         </dd>
 
         <dt>
+          <a href="https://html-animation.alanwsmith.com/"
+            >html-animation.alanwsmith.com</a
+          >
+        </dt>
+        <dd>
+          The forth experiment in the series of making site/pages relying on
+          only HTML without JavaScript, CSS, or images. This one produces an
+          animation effect by using mete redirect tags to cycle between pages
+        </dd>
+
+        <dt>
           <a href="https://html-maze.alanwsmith.com/"
             >html-maze.alanwsmith.com</a
           >
