--- a/site/index.html
+++ b/site/index.html
@@ -212,12 +212,12 @@
           And my
           <a href="https://podcast.alanwsmith.com/">podcast</a>
         </li>
-        <li>
-          Other links are
-          <a href="#my-digital-domain-garden">further below</a>, but we need to
-          tell the story of a digital garden before we get to those:
-        </li>
       </ul>
+      <p>
+        There are a bunch of other links
+        <a href="#my-digital-domain-garden">further below</a>, but we need to
+        tell the story of a digital garden before we get to those
+      </p>
 
       <h3>A New Idea</h3>
 
