Moved how to post to another page and updated domains

--- a/site/index.html
+++ b/site/index.html
@@ -195,290 +195,31 @@
   <body>
     <header>
       <h1>links.alanwsmith.com</h1>
-      <h2>Or, How To Grow Your Digital Garden With Sub-Domains</h2>
     </header>
     <main>
       <h3>First things first</h3>
-      <p>Welcome to my links page. You can find me on:</p>
-      <ul>
-        <li><a href="https://twitter.com/TheIdOfAlan">Twitter</a> a lot</li>
-        <li>
-          <a href="https://www.twitch.tv/theidofalan">Twitch</a> occasionally
-        </li>
-        <li>
-          There's also my <a href="https://www.alanwsmith.com">main site</a>
-        </li>
-        <li>
-          And my
-          <a href="https://podcast.alanwsmith.com/">podcast</a>
-        </li>
-      </ul>
+      <p>Welcome to my links page</p>
       <p>
-        There are a bunch of other links
-        <a href="#my-digital-domain-garden">further below</a>, but we need to
-        tell the story of a digital garden before we get to those
+        You can find me on:
+        <a href="https://twitter.com/TheIdOfAlan">Twitter</a> a lot,
+        <a href="https://www.twitch.tv/theidofalan">Twitch</a> occasionally, and
+        <a href="https://hachyderm.io/">Hachyderm</a> more and more
       </p>
-
-      <h3>A New Idea</h3>
-
       <p>
-        I first heard about digital gardens on the wonderful
-        <a href="https://www.partycorgi.com/">Party Corgi Network</a>. That lead
-        me to these posts by
-        <a href="https://maggieappleton.com/garden-history">Maggie Appleton</a>
-        and <a href="https://joelhooks.com/digital-garden">Joel Hooks</a> which
-        explain the concept nicely. Here's a brief snippet from Maggie
-        Appleton's piece:
+        I've got a site at
+        <a href="https://www.alanwsmith.com">alanwsmith.com</a> and a
+        <a href="https://podcast.alanwsmith.com/">podcast</a>
       </p>
-
-      <blockquote>
-        Rather than presenting a set of polished articles, displayed in reverse
-        chronological order, these sites act more like free form,
-        work-in-progress wikis.
-      </blockquote>
-
-      <p>That idea stuck a chord.</p>
-
       <p>
-        I haven't been so excited about playing on the web since the '90s. I
-        switched my site over from software designed to make a blog to a some
-        that provides more freedom to move and experiment. I've been playing
-        with the layout, design, and content ever since.
-      </p>
-
-      <p>But, I was feeling resistance.</p>
-
-      <h3>Friction</h3>
-
-      <p>
-        Whenever I wanted to play with an idea, I'd have to take the existing
-        setup and structure into account. For example, consider the width of the
-        page layouts. Every page on my site has the same width. It's defined in
-        a single configuration template. To make something a different width,
-        I'd have to rewire the site for multiple templates.
-      </p>
-
-      <p>
-        I've got enough experience that that wouldn't be particularly hard. But,
-        it would be work. And that work is friction. And that friction stops me.
-      </p>
-
-      <p>Or, it's better to say that it keeps me from getting started.</p>
-
-      <p>
-        When I have an idea, I want to play with it. Not work on the
-        infrastructure that supports it.
-      </p>
-
-      <h3>Enter Dusty Domains</h3>
-
-      <p>
-        <a href="https://dusty.domains/">Dusty Domains</a> was a charity project
-        (and genius marketing play) from Netlify at the end of 2021. The pitch
-        was to dip into the developer community's vast collection of unused
-        domains and actually publish something on them by the end of the year.
-        Each completed site added $500 to a pool for coding related charities.
-      </p>
-
-      <p>
-        That sounded great to me. So, I built
-        <a href="https://jacktorrance.blog/">JackTorrance.blog</a>
-      </p>
-
-      <p>
-        I turned it around in three days and had an absolute blast doing it. I
-        started with nothing more than the domain, an idea, and a deadline and
-        turned into something I'm really proud of.
-      </p>
-
-      <p>
-        Something also clicked during the build. I realized I hadn't experienced
-        any of that &quot;getting started&quot; friction I'd been running into
-        with ideas for my site. The empty domain was a clean slate. No worrying
-        about the width of pages. I could make them whatever size I wanted
-        without hassle.
-      </p>
-
-      <p>
-        And, it went way beyond that. The software for my main site had no
-        bearing on what I used for the new domain. I could use the same
-        framework, a completely different one, or roll back to vanilla HTML,
-        CSS, and JavaScript.
-      </p>
-
-      <p>
-        If you had said the words "domains are independent" to me, I would have
-        responded, "umm, yes. and?" But, the implications never fully
-        registered. I didn't grok it.
-      </p>
-
-      <p>Now, I do.</p>
-
-      <h3>I have one domain</h3>
-
-      <p>
-        When you buy a domain name, the basic setup ends up giving you two. One
-        that starts with &quot;www&quot; (e.g. &quot;www.alanwsmith.com&quot;)
-        and one that doesn't have any preface (e.g. &quot;alanwsmith.com&quot;).
-        You can serve a site off either of them. I've gone back and forth over
-        the years, but, they can pretty much be considered the same thing.
-      </p>
-
-      <p>
-        I've also split things out when I needed to use another service for my
-        site. For example, serving my site pages off
-        &quot;www.alanwsmith.com&quot; and then using
-        &quot;images.alanwsmith.com&quot; pointed to a CDN to serve images.
-      </p>
-
-      <p>
-        Again, that was really just powering the same site with a few different
-        root URLs.
-      </p>
-
-      <p>
-        That's been my mental model for two decades. A cohesive site that
-        sometimes spans sub-domains for functionality.
-      </p>
-
-      <h3>Then, something happened</h3>
-
-      <p>
-        It was getting towards the end of the Dusty Domains and they hadn't hit
-        their goal. I'd seen one of their inspiration domains called
-        <a href="https://hawk.dance/">Hawk Dance</a>. It's a single page site
-        with throw-back animation. I figured I could pull off something like
-        that, but I didn't have another unused domain that fit the bill. So, I
-        decided to throw something up on a sub-domain of my site and made
-        <a href="https://hacking.alanwsmith.com/">hacking.alanwsmith.com</a>.
-      </p>
-
-      <p>Boom. $500 for charity.</p>
-
-      <p>
-        They were still short. So, I made
-        <a href="https://areyoucurrentlyalive.alanwsmith.com/"
-          >AreYouCurrentlyAlive.alanwsmith.com</a
+        I'm also growing a Digital Garden of sub-domains listed below. (I
+        <a
+          href="https://www.alanwsmith.com/posts/28dakarfdsyq--how-to-grow-your-digital-garden-with-subdomains"
+          >encourage you to play with your own sub-domains</a
         >
+        too)
       </p>
 
-      <p>$500 more.</p>
-
-      <p>
-        Both sites took about fifteen minutes to build and launch. I was
-        plotting to do twenty more if they needed. And, that's when the bit
-        flipped.
-      </p>
-      <p>I don't have one domain. I have infinite domains.</p>
-
-      <p>Each one, a clean slate.</p>
-
-      <h3>Infinite Space</h3>
-
-      <p>Not gonna lie. I feel punch drunk thinking of the implications.</p>
-
-      <p>
-        The ability to spin up a new domain on a whim feels like a super-power.
-        Firing one up to play with a new framework?
-        <a href="https://nextjs-playground.alanwsmith.com/">No problem</a>.
-        Spinning one up for every framework out there? I mean, they're infinite,
-        so... <a href="https://every-framework.alanwsmith.com">why not</a>?
-      </p>
-
-      <p>
-        How about playing around with site designs using a full copy of the
-        content? Just throw some notes to the search engines telling them to
-        ignore the sandbox and away we go.
-      </p>
-
-      <p>
-        Need a playground to test out a CSS library?
-        <a href="https://tailwind-playground.alanwsmith.com/">You got it</a>.
-        What to practice your vanilla JavaScript? Just flip the switch
-        <a href="https://javascript-playground.alanwsmith.com/">and get going</a
-        >.
-      </p>
-
-      <p>That's all well and good, but what about something less practical?</p>
-
-      <p>
-        Like, say, a domain for each letter of the alphabet with nothing but the
-        corresponding letter on it...
-      </p>
-
-      <p>Fuck it. Let's go:</p>
-
-      <p>
-        <a href="https://a.alanwsmith.com/">a</a>,
-        <a href="https://b.alanwsmith.com/">b</a>,
-        <a href="https://c.alanwsmith.com/">c</a>,
-        <a href="https://d.alanwsmith.com/">d</a>,
-        <a href="https://e.alanwsmith.com/">e</a>,
-        <a href="https://f.alanwsmith.com/">f</a>,
-        <a href="https://g.alanwsmith.com/">g</a>,
-        <a href="https://h.alanwsmith.com/">h</a>,
-        <a href="https://i.alanwsmith.com/">i</a>,
-        <a href="https://j.alanwsmith.com/">j</a>,
-        <a href="https://k.alanwsmith.com/">k</a>,
-        <a href="https://l.alanwsmith.com/">l</a>,
-        <a href="https://m.alanwsmith.com/">m</a>,
-        <a href="https://n.alanwsmith.com/">n</a>,
-        <a href="https://o.alanwsmith.com/">o</a>,
-        <a href="https://p.alanwsmith.com/">p</a>,
-        <a href="https://q.alanwsmith.com/">q</a>,
-        <a href="https://r.alanwsmith.com/">r</a>,
-        <a href="https://s.alanwsmith.com/">s</a>,
-        <a href="https://t.alanwsmith.com/">t</a>,
-        <a href="https://u.alanwsmith.com/">u</a>,
-        <a href="https://v.alanwsmith.com/">v</a>,
-        <a href="https://w.alanwsmith.com/">w</a>,
-        <a href="https://x.alanwsmith.com/">x</a>,
-        <a href="https://y.alanwsmith.com/">y</a>,
-        <a href="https://z.alanwsmith.com/">z</a>.
-      </p>
-      <p>Easy as 1, 2, 3.</p>
-
-      <h3>An Infinite Garden</h3>
-
-      <p>
-        The idea of the digital garden resonated with me the instant I heard it.
-        I made moves towards it with the energy of the initial excitement, but
-        that burned out. The subtle friction and resistance that comes from
-        working within an existing site worn down the enthusiasm until it was
-        gone.
-      </p>
-
-      <p>
-        A fitting analogy is the trees of the black forest. They're so dense
-        they prevent anything else from growing beneath them. Trying to do new
-        work on an existing site is like that. It means fighting against the
-        environment. Being bound by its constraints.
-      </p>
-
-      <p>
-        But, we're not bound to a single domain. Doomed to fight against its
-        pressures until we give up, exhausted.
-      </p>
-
-      <p>We have space.</p>
-
-      <p>We can grow.</p>
-
-      <p>Our gardens are infinite.</p>
-
-      <p>Let's see what we can do with them.</p>
-
-      <div class="spacer">~ fin ~</div>
-
-      <h4 id="my-digital-domain-garden">My Digital Domain Garden</h4>
-
-      <p>
-        Now, allow me to introduce my budding digital domain garden. I just
-        started some of them so they're pretty sparse. But, that's what it's all
-        about. More importantly, the joy of playing with them and seeing which
-        ones draw my attention and grow is invigorating and recharging and
-        everything working on your own projects should be.
-      </p>
+      <h3>My Digital Garden</h3>
 
       <dl>
         <!-- LINKS -->
@@ -511,9 +252,9 @@
           >
         </dt>
         <dd>
-          A few famous pieces of art turned into ASCII. This is experiment in
-          making a site out of just HTML. There&apos;s no JavaScript, CSS, or
-          image calls. Just the HTML. The idea came from
+          A few famous pieces of art turned into ASCII. This is one of five
+          experiments in making a site out of just HTML. There&apos;s no
+          JavaScript, CSS, or image calls. Just the HTML. The idea came from
           <a href="https://twitter.com/whitep4nth3r/status/1510568114966171649"
             >this tweet from whitep4nth3r</a
           >
@@ -554,7 +295,10 @@
         <dt>
           <a href="https://hacking.alanwsmith.com/">hacking.alanwsmith.com</a>
         </dt>
-        <dd>This is what hacking looks like</dd>
+        <dd>
+          This is what hacking looks like. Also, another site that got $500 for
+          charity as part of <a href="https://dusty.domains/">Dusty Domains</a>
+        </dd>
 
         <dt>
           <a href="https://horsevatars.alanwsmith.com/"
@@ -572,9 +316,21 @@
           >
         </dt>
         <dd>
-          The forth experiment in the series of making site/pages relying on
-          only HTML without JavaScript, CSS, or images. This one produces an
-          animation effect by using mete redirect tags to cycle between pages
+          The forth experiment in the series five of making site/pages relying
+          on only HTML without JavaScript, CSS, or images. This one produces an
+          animation effect by using meta redirect tags to cycle between pages.
+          (Note that you may have to close the page to stop it)
+        </dd>
+
+        <dt>
+          <a href="https://html-display-board.alanwsmith.com/"
+            >html-display-board.alanwsmith.com</a
+          >
+        </dt>
+        <dd>
+          This was the fifth of the five experiments is seeing what can be done
+          with only HTML (no JavaScript, CSS, or images). It uses the deprecated
+          marquee tag to create a scrolling text display
         </dd>
 
         <dt>
@@ -583,8 +339,9 @@
           >
         </dt>
         <dd>
-          Another experiment to see what can be done with HTML alone. No
-          JavaScript. No CSS. Just tags (including some deprecated ones)
+          Another of the five experiments to see what can be done with HTML
+          alone. No JavaScript. No CSS. Just tags (including some deprecated
+          ones)
         </dd>
 
         <dt>
@@ -615,7 +372,37 @@
         </dt>
         <dd>
           You're number one source for links to my letters of the alphabet
-          sites.
+          sites. I made them as part of my &quot;<a
+            href="https://www.alanwsmith.com/posts/28dakarfdsyq--how-to-grow-your-digital-garden-with-subdomains"
+            >How To Grow Your Digital Garden With Sub-Domains</a
+          >&quot; post. (Here's direct letter access if you're looking for that:
+
+          <a href="https://a.alanwsmith.com/">a</a>,
+          <a href="https://b.alanwsmith.com/">b</a>,
+          <a href="https://c.alanwsmith.com/">c</a>,
+          <a href="https://d.alanwsmith.com/">d</a>,
+          <a href="https://e.alanwsmith.com/">e</a>,
+          <a href="https://f.alanwsmith.com/">f</a>,
+          <a href="https://g.alanwsmith.com/">g</a>,
+          <a href="https://h.alanwsmith.com/">h</a>,
+          <a href="https://i.alanwsmith.com/">i</a>,
+          <a href="https://j.alanwsmith.com/">j</a>,
+          <a href="https://k.alanwsmith.com/">k</a>,
+          <a href="https://l.alanwsmith.com/">l</a>,
+          <a href="https://m.alanwsmith.com/">m</a>,
+          <a href="https://n.alanwsmith.com/">n</a>,
+          <a href="https://o.alanwsmith.com/">o</a>,
+          <a href="https://p.alanwsmith.com/">p</a>,
+          <a href="https://q.alanwsmith.com/">q</a>,
+          <a href="https://r.alanwsmith.com/">r</a>,
+          <a href="https://s.alanwsmith.com/">s</a>,
+          <a href="https://t.alanwsmith.com/">t</a>,
+          <a href="https://u.alanwsmith.com/">u</a>,
+          <a href="https://v.alanwsmith.com/">v</a>,
+          <a href="https://w.alanwsmith.com/">w</a>,
+          <a href="https://x.alanwsmith.com/">x</a>,
+          <a href="https://y.alanwsmith.com/">y</a>,
+          <a href="https://z.alanwsmith.com/">z</a>. )
         </dd>
 
         <dt>
@@ -685,7 +472,7 @@
           I got into code. During the years of getting my ass kicked by mental
           health issues, it left me. It was gone so long I'&apos;d gotten used
           to the idea that it was gone forever. Now, it&apos;s back. This is
-          where I&apos;m posting my stuff.
+          where I&apos;m posting my stuff
         </dd>
 
         <dt>
@@ -694,8 +481,9 @@
           >
         </dt>
         <dd>
-          This is an experiment to make pixel art using only an HTML table. No
-          JavaScript, no CSS, no images, just the HTML. It was inspired by
+          This is an experiment to make pixel art using only an HTML table. It's
+          one of five using no JavaScript, CSS, or images. Just the HTML. It was
+          inspired by
           <a href="https://twitter.com/whitep4nth3r/status/1510568114966171649"
             >this tweet from whitep4nth3r</a
           >
@@ -707,7 +495,7 @@
         <dd>
           Home of The Pod Of Alan where I riff on working in public, making
           stuff, creativity, art, design, education, learning, language, mental
-          health, movies, and music.
+          health, movies, and music
         </dd>
 
         <dt>
@@ -715,7 +503,7 @@
         </dt>
         <dd>
           I wanted to see what would happen if you encoded time into a QR code.
-          This is it.
+          This is it
         </dd>
 
         <dt>
@@ -740,7 +528,7 @@
         <dd>
           My basic template for starting sites without frameworks. Has sample
           favicons and Open Graph image calls and will eventually have CSS and
-          JS samples.
+          JS samples
         </dd>
 
         <dt><a href="https://www.surftech.tv/">SurfTech.tv</a></dt>
@@ -748,7 +536,7 @@
           This is a little project I built for myself so that when I've got a
           some time to watch a tech video during lunch I don't have to worry
           about finding one. This just plays a random one for me. Still have a
-          bunch of features to add to this, but the basic functionality is nice.
+          bunch of features to add to this, but the basic functionality is nice
         </dd>
 
         <dt>
@@ -766,7 +554,16 @@
         <dd>
           I find most coding tutorials frustrating. This is my place to
           experiment with layouts, designs, and concepts that work with the way
-          my brain works.
+          my brain works
+        </dd>
+        <dt>
+          <a href="https://yabai.alanwsmith.com/">yabai.alanwsmith.com</a>
+        </dt>
+        <dd>
+          I use <a href="https://github.com/koekeishiya/yabai">Yabai</a> as a
+          tiling window manager on my mac. This page has some scripts I use to
+          automatically move windows around based on which monitors I have
+          connected and what I'm doing
         </dd>
       </dl>
     </main>
