--- a/site/index.html
+++ b/site/index.html
@@ -262,6 +262,16 @@
         </dd>
 
         <dt>
+          <a href="https://band-names.alanwsmith.com/"
+            >band-names.alanwsmith.com</a
+          >
+        </dt>
+        <dd>
+          I&apos;m always on the look out for band names. I&apos;ve started
+          collecting them here
+        </dd>
+
+        <dt>
           <a href="https://cloudinary-image-maker.alanwsmith.com/"
             >cloudinary-image-maker.alanwsmith.com</a
           >
@@ -359,6 +369,16 @@
             href="https://web.archive.org/web/20010721234034/http://www.alanwsmith.com/"
             >way back in 2001</a
           >
+        </dd>
+
+        <dt>
+          <a href="https://javascript-playground.alanwsmith.com"
+            >javascript-playground.alanwsmith.com</a
+          >
+        </dt>
+        <dd>
+          A place for me to mess around with javascript to create snippets for
+          both understanding how things work and to use to copy into other code
         </dd>
 
         <dt><strong>links.alanwsmith.com</strong> &lt;- You are here</dt>
