Added html-random-pattern site

--- a/site/index.html
+++ b/site/index.html
@@ -326,7 +326,7 @@
           >
         </dt>
         <dd>
-          The forth experiment in the series five of making site/pages relying
+          The forth experiment in the series six of making site/pages relying
           on only HTML without JavaScript, CSS, or images. This one produces an
           animation effect by using meta redirect tags to cycle between pages.
           (Note that you may have to close the page to stop it)
@@ -338,7 +338,7 @@
           >
         </dt>
         <dd>
-          This was the fifth of the five experiments is seeing what can be done
+          This was the fifth of the six experiments is seeing what can be done
           with only HTML (no JavaScript, CSS, or images). It uses the deprecated
           marquee tag to create a scrolling text display
         </dd>
@@ -349,10 +349,19 @@
           >
         </dt>
         <dd>
-          Another of the five experiments to see what can be done with HTML
+          Another of the six experiments to see what can be done with HTML
           alone. No JavaScript. No CSS. Just tags (including some deprecated
           ones)
         </dd>
+
+
+        <dt>
+        <a href="https://html-random-pattern.alanwsmith.com/">
+          html-random-pattern.alanwsmith.com
+        </a>
+        <dd>A grid with random colors.
+        The sixth no javascript, css, images experiment. </dd>
+
 
         <dt>
           <a href="https://ideas.alanwsmith.com/">ideas.alanwsmith.com</a>
@@ -502,7 +511,7 @@
         </dt>
         <dd>
           This is an experiment to make pixel art using only an HTML table. It's
-          one of five using no JavaScript, CSS, or images. Just the HTML. It was
+          one of six using no JavaScript, CSS, or images. Just the HTML. It was
           inspired by
           <a href="https://twitter.com/whitep4nth3r/status/1510568114966171649"
             >this tweet from whitep4nth3r</a
